2005-02-26  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (dispatch)  Account for the possibility
	of a failed "owner" event.

	* lib/Mj/Access.pm:  (_a_mailfile)  Take pains to prevent
	a mail loop of the whoami_owner address with itself.
	(_d_owner)  Messages to the list owners are now subject to 
	the access rules.

	* lib/Mj/CommandProps.pm:  Messages to the list owners are
	now subject to the access rules.

	* lib/Mj/Inform.pm:  (_inform_owner)  Take pains to prevent
	a mail loop of the whoami_owner address with itself.

	* lib/Mj/MailOut.pm:  (owner_done)  Apply the access rules
	to messages sent to the list owners which were not handled
	by the bounce parser.

2005-01-31  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect)  Give a reasonable value
	for the elapsed time if the connection fails.
	Thanks to Marc Fournier.

	* lib/Mj/Parser.pm:  (parse_part)  Give a reasonable value
	for the elapsed time if no commands are found.

2005-01-16  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_d_advertise)  Show information about
	a list if an admin password for the list is used.
	Thanks to Roger Klorese.

2004-12-09  Michael Yount <csf@moscow.com>

	* files/INDEX.pl:  The "unregistered" file has a "noweb"
	counterpart.

	* lib/Majordomo.pm:  (trigger, _unregister)  Send farewell
	messages as appropriate when an address is unregistered.
	Suggested by Brock Rozen.

	* lib/mj_cf_data.pl, mj_cf_defs.pl:  The farewell and
	farewell_files settings are also GLOBAL.

	* lib/Mj/CommandProps.pm:  Support the unregister-farewell
	and unregister-nofarewell commands.

2004-12-08  Michael Yount <csf@moscow.com>

	* lib/Mj/CommandProps.pm:  Support the who-noname command,
	which prints the plain address without comments.
	Suggested by Steven Orr.

	* lib/Mj/Format.pm:  (who)  Support the who-noname command.

2004-12-01  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_subscribe)  Log a "register" event